# libtock-rs

./: Cargo.toml  README.md
apis/app_state/: Cargo.toml
apis/app_state/src/: lib.rs  tests.rs
apis/console/src/: lib.rs
apis/rng/: Cargo.toml
apis/rng/src/: lib.rs  tests.rs
libtock2/: Cargo.toml
libtock2/examples/: app_state.rs  rng.rs
libtock2/src/: lib.rs
platform/src/: constants.rs  lib.rs  syscalls.rs  syscalls_impl.rs
runner/src/: elf2tab.rs
runtime/: libtock_layout.ld
runtime/layouts/: microbit_v2.ld
syscalls_tests/src/: lib.rs  memop.rs
unittest/src/: expected_syscall.rs  syscall_log.rs
unittest/src/fake/: mod.rs
unittest/src/fake/app_state/: mod.rs
unittest/src/fake/rng/: mod.rs
unittest/src/fake/syscalls/: memop_impl.rs  mod.rs  raw_syscalls_impl.rs
